[tool.poetry]
name = "snek-scripts"
version = "0.1.3c"
description = ""
authors = ["supremestdoggo <<>>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/supremestdoggo/snek_scripts"
repository = "https://github.com/supremestdoggo/snek_scripts"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"